--- a/yanshi18project/.classpath
+++ b/yanshi18project/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_74"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="jar/mysql-connector-java-5.1.7-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
